--- a/application/src/main/resources/fx/views/add-workitem.fxml
+++ b/application/src/main/resources/fx/views/add-workitem.fxml
@@ -1,27 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-            maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            fx:controller="de.pbauerochse.worklogviewer.fx.AddWorkItemController"
-            prefHeight="600.0" prefWidth="800.0">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<BorderPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.AddWorkItemController">
 
     <center>
-        <Label>Hello Hello</Label>
+        <StackPane alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="TOP_LEFT">
+            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                <center>
+                    <GridPane hgap="5.0" vgap="2.0" BorderPane.alignment="TOP_LEFT">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints prefHeight="20.0" vgrow="NEVER" />
+                            <RowConstraints prefHeight="30.0" vgrow="NEVER" />
+                            <RowConstraints vgrow="NEVER" />
+                            <RowConstraints prefHeight="20.0" vgrow="NEVER" />
+                            <RowConstraints prefHeight="30.0" vgrow="NEVER" />
+                            <RowConstraints prefHeight="20.0" vgrow="NEVER" />
+                            <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                        </rowConstraints>
+                        <padding>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
+
+                        <Label text="%dialog.addworkitem.issue" GridPane.columnSpan="2147483647" />
+                        <TextField fx:id="issueTextField" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                            <GridPane.margin>
+                                <Insets bottom="2.0" top="2.0" />
+                            </GridPane.margin>
+                        </TextField>
+
+                        <Label text="%dialog.addworkitem.date" GridPane.rowIndex="3" />
+                        <Label text="%dialog.addworkitem.time" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+                        <DatePicker fx:id="workDateDatePicker" GridPane.hgrow="NEVER" GridPane.rowIndex="4" />
+                        <TextField fx:id="workDurationTextField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4">
+                            <GridPane.margin>
+                                <Insets bottom="2.0" top="2.0" />
+                            </GridPane.margin>
+                        </TextField>
+
+                        <Label text="%dialog.addworkitem.description" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
+                        <TextField fx:id="workDescriptionTextField" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" />
+
+                    </GridPane>
+                </center>
+
+                <bottom>
+                    <VBox>
+                        <HBox alignment="CENTER_RIGHT" spacing="5.0" styleClass="tool-bar" BorderPane.alignment="CENTER_RIGHT">
+                            <padding>
+                                <Insets bottom="7.0" left="10.0" right="10.0" top="7.0" />
+                            </padding>
+
+                            <Button fx:id="cancelButton" cancelButton="true" mnemonicParsing="false" onAction="#closeDialog" text="%view.settings.cancel" />
+                            <Button fx:id="saveButton" defaultButton="true" mnemonicParsing="false" onAction="#createNewWorkItem" text="%view.settings.save" />
+                        </HBox>
+                    </VBox>
+                </bottom>
+
+            </BorderPane>
+
+            <!-- Loading overlay -->
+            <StackPane fx:id="progressIndicator" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false" VBox.vgrow="ALWAYS">
+                <ProgressIndicator maxHeight="60.0" maxWidth="60.0" StackPane.alignment="CENTER" />
+            </StackPane>
+
+        </StackPane>
     </center>
 
     <bottom>
-        <HBox alignment="CENTER_RIGHT" spacing="5.0" styleClass="tool-bar" BorderPane.alignment="CENTER_RIGHT">
-            <padding>
-                <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
-            </padding>
-            <Button onAction="#closeDialog" cancelButton="true" mnemonicParsing="false" text="%view.settings.cancel"/>
-            <Button onAction="#saveNewWorkItem" fx:id="saveButton" defaultButton="true" mnemonicParsing="false" text="%view.settings.save"/>
-        </HBox>
+        <VBox fx:id="progressBarContainer" BorderPane.alignment="CENTER" />
     </bottom>
 
 </BorderPane>
