--- a/application/src/main/resources/fx/views/add-workitem.fxml
+++ b/application/src/main/resources/fx/views/add-workitem.fxml
@@ -22,6 +22,7 @@
                             <RowConstraints prefHeight="30.0" vgrow="NEVER" />
                             <RowConstraints prefHeight="20.0" vgrow="NEVER" />
                             <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
                         </rowConstraints>
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -46,6 +47,8 @@
 
                         <Label text="%dialog.addworkitem.description" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
                         <TextField fx:id="workDescriptionTextField" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" />
+
+                        <Label fx:id="errorLabel" styleClass="error-label" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" wrapText="true" />
 
                     </GridPane>
                 </center>
