--- a/application/src/main/resources/fx/css/dark.css
+++ b/application/src/main/resources/fx/css/dark.css
@@ -52,6 +52,12 @@
     -fx-border-insets: 1 0 0 0;
 }
 
+.tool-bar .separator:vertical .line {
+    -fx-border-color: transparent transparent transparent -fx-shadow-highlight-color;
+    -fx-border-width: 1;
+    -fx-border-insets: 5 0 5 0;
+}
+
 .progress-bar.error > .bar {
     -fx-background-color: #8f2b3c;
 }
