--- a/application/src/main/resources/fx/views/main.fxml
+++ b/application/src/main/resources/fx/views/main.fxml
@@ -3,7 +3,7 @@
 <?import de.pbauerochse.worklogviewer.fx.components.tabs.TimeReportResultTabbedPane?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane fx:id="mainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.MainViewController">
+<BorderPane fx:id="mainView" maxHeight="Infinity" maxWidth="Infinity" minHeight="0" minWidth="0" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.MainViewController">
 
     <top>
         <VBox>
