--- a/application/src/main/resources/fx/views/about.fxml
+++ b/application/src/main/resources/fx/views/about.fxml
@@ -29,8 +29,6 @@
         </font>
     </Label>
 
-
-
     <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="160.0">
         <Label text="%release.description" textAlignment="JUSTIFY" wrapText="true" VBox.vgrow="ALWAYS">
             <VBox.margin>
@@ -39,6 +37,7 @@
         </Label>
         <Hyperlink fx:id="youtrackLink" text="YouTrack by JetBrains" />
         <Hyperlink fx:id="worklogViewerLink" text="YouTrack Worklog Viewer @github.com" />
+        <Hyperlink fx:id="logoByPatrickMarx" text="YouTrack Worklog Viewer Logo by Patrick Marx" />
         <Hyperlink fx:id="licenseLink" text="%release.license" />
         <Hyperlink fx:id="iconsLink" layoutX="10.0" layoutY="94.0" text="%release.icons" />
     </VBox>
