--- a/application/src/main/resources/fx/views/add-workitem.fxml
+++ b/application/src/main/resources/fx/views/add-workitem.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane prefHeight="260.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.AddWorkItemController">
+<BorderPane minHeight="330.0" minWidth="380.0" prefHeight="330.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.workitem.add.AddWorkItemController">
 
     <center>
-        <StackPane alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="TOP_LEFT">
-            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+        <StackPane alignment="TOP_LEFT" maxHeight="Infinity" maxWidth="Infinity" BorderPane.alignment="TOP_LEFT">
+            <BorderPane maxHeight="Infinity" maxWidth="Infinity">
                 <center>
                     <VBox>
                         <GridPane hgap="5.0" vgap="2.0" BorderPane.alignment="TOP_LEFT" VBox.vgrow="NEVER">
@@ -18,7 +18,8 @@
                             <rowConstraints>
                                 <RowConstraints prefHeight="20.0" vgrow="NEVER" />
                                 <RowConstraints prefHeight="30.0" vgrow="NEVER" />
-                                <RowConstraints vgrow="NEVER" />
+                                <RowConstraints prefHeight="20.0" vgrow="NEVER" />
+                                <RowConstraints prefHeight="30.0" vgrow="NEVER" />
                                 <RowConstraints prefHeight="20.0" vgrow="NEVER" />
                                 <RowConstraints prefHeight="30.0" vgrow="NEVER" />
                                 <RowConstraints prefHeight="20.0" vgrow="NEVER" />
@@ -32,22 +33,33 @@
                                 </GridPane.margin>
                             </TextField>
 
-                            <Label text="%dialog.addworkitem.date" GridPane.rowIndex="3" />
-                            <Label text="%dialog.addworkitem.time" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                            <Label text="%dialog.addworkitem.date" GridPane.rowIndex="2" />
+                            <Label text="%dialog.addworkitem.time" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                            <DatePicker fx:id="workDateDatePicker" GridPane.hgrow="NEVER" GridPane.rowIndex="4" />
-                            <TextField fx:id="workDurationTextField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4">
+                            <DatePicker fx:id="workDateDatePicker" GridPane.hgrow="NEVER" GridPane.rowIndex="3" />
+                            <TextField fx:id="workDurationTextField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                                 <GridPane.margin>
                                     <Insets bottom="2.0" top="2.0" />
                                 </GridPane.margin>
                             </TextField>
 
-                            <Label text="%dialog.addworkitem.description" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
-                            <TextField fx:id="workDescriptionTextField" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" />
+                            <Label text="%dialog.addworkitem.worktype" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+                            <ComboBox fx:id="workTypeComboBox" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5">
+                                <GridPane.margin>
+                                    <Insets bottom="2.0" top="2.0" />
+                                </GridPane.margin>
+                            </ComboBox>
+
+                            <Label text="%dialog.addworkitem.description" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" />
+                            <TextField fx:id="workDescriptionTextField" GridPane.columnSpan="2147483647" GridPane.rowIndex="7">
+                                <GridPane.margin>
+                                    <Insets bottom="2.0" top="2.0" />
+                                </GridPane.margin>
+                            </TextField>
 
                         </GridPane>
 
-                        <Label fx:id="errorLabel" alignment="TOP_LEFT" styleClass="error-label" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" VBox.vgrow="SOMETIMES" />
+                        <Label fx:id="errorLabel" alignment="TOP_LEFT" styleClass="error-label" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="8" VBox.vgrow="SOMETIMES" />
                   <padding>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                   </padding>
