Sorting WorkItems by date descending

--- a/application/src/main/resources/fx/views/issue-details.fxml
+++ b/application/src/main/resources/fx/views/issue-details.fxml
@@ -59,7 +59,7 @@
                     <WorklogActionsColumn/>
                 </columns>
                 <sortOrder>
-                    <fx:reference source="dateColumn"/>
+                    <fx:reference source="dateColumn" sortType="DESCENDING" />
                 </sortOrder>
             </TableView>
             <BorderPane.margin>
